fix firefox overflow issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1085,7 +1085,7 @@ body {
   top: 39px;
   right: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   
